--- a/Snapchat/app/src/main/res/layout/activity_main.xml
+++ b/Snapchat/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,32 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <EditText
+            android:layout_width="314dp"
+            android:layout_height="74dp"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/emailEditText" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="28dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="47dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="46dp" android:hint="Email"
+            android:selectAllOnFocus="true"/>
+    <EditText
+            android:layout_width="314dp"
+            android:layout_height="74dp"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/passwordEditText" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/emailEditText" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="48dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="49dp" android:hint="Password"/>
+    <Button
+            android:text="GO"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/goButton" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="170dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="153dp" android:onClick="goClicked"/>
 
 </android.support.constraint.ConstraintLayout>
