--- a/Snapchat/app/src/main/res/layout/activity_main.xml
+++ b/Snapchat/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,4 +35,4 @@
             android:layout_marginStart="170dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="153dp" android:onClick="goClicked"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
