--- a/Snapchat/app/src/main/res/layout/activity_create_snap.xml
+++ b/Snapchat/app/src/main/res/layout/activity_create_snap.xml
@@ -19,8 +19,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/chooseImageButton" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/createSnapImageView"
-            app:layout_constraintStart_toStartOf="@+id/createSnapImageView"
-            android:layout_marginStart="27dp" android:onClick="chooseImageClicked"/>
+            android:onClick="chooseImageClicked" tools:layout_editor_absoluteX="142dp"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
